--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,46 +1,46 @@
 <div class="parent">
 
-<div class="left">
+  <div class="left">
 
-<p id="notice"><%= notice %></p>
+    <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+    <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Visit Count</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table class="posts">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Content</th>
+          <th>Visit Count</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.visit_count %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @posts.each do |post| %>
+          <tr>
+            <td><%= post.title %></td>
+            <td><%= post.content %></td>
+            <td><%= post.visit_count %></td>
+            <td><%= link_to 'Show', post %></td>
+            <td><%= link_to 'Edit', edit_post_path(post) %></td>
+            <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Post', new_post_path %>
-</div>
-<div class="right">
-<h1>TOP 10 Posts</h1>
-<div class="top-10-container">
-  <span class="tips"></span>
-  <ul class='top-10-list'>
+  <%= link_to 'New Post', new_post_path %>
+  </div>
+  <div class="right">
+  <h1>TOP 10 Posts</h1>
+    <div class="top-10-container">
+      <span class="tips"></span>
+      <ul class='top-10-list'>
 
-  </ul>
-</div>
-</div>
+      </ul>
+    </div>
+  </div>
 </div>
